--- a/visitka.html
+++ b/visitka.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Визитка</title>
-    <link rel="stylesheet" type="text/css" href="static/styles.css">
+    <link rel="stylesheet" type="text/css" href="static/styles-main.css">
     <link rel="stylesheet" type="text/css" href="static/list_styles.css">
 </head>
 <body>
+
     <h1> Визитка </h1>
     <hr>
     <div class="general">
@@ -15,7 +16,7 @@
 
         <div class="menu-block">
             <ul class="menu-list">
-                <li class="menu"><a href="profile.html" class="ref"> Профиль </a></li>
+                <li class="menu"><a href="profile.html" class="ref"> Конвертатор </a></li>
                 <li class="menu"><a href="http://yandex.ru" class="ref"> Яндекс </a></li>
             </ul>
             <h3> Навигация по странице: </h3>
@@ -30,12 +31,15 @@
         <div class="main-block">
             <div class="line-block">
                 <img src="static/patrick.png" height="300" width="300" class="line-block-elem">
-                <p class="line-block-elem">
-                    Основная идея гибкой (flex) разметки заключается в том, чтобы предоставить контейнеру возможность изменять
-                    ширину/высоту (и порядок) своих элементов, для того чтобы наилучшим образом заполнить доступное пространство
-                    (в основном для размещения на всех типах и размерах экранов). Flexbox контейнер расширяет элементы чтобы заполнить
-                    свободное пространство или сжимает их чтобы избежать переполнения.
-                </p>
+                <div id="pers-data" class="line-block-elem">
+                    <h3>Данные о пользователе:</h3>
+                    <ol class="pers-data-list">
+                        <li class="pers-data-list-elem"> Имя пользователя: <input type="text" class="output-data" disabled></li>
+                        <li class="pers-data-list-elem"> Фамилия пользователя: <input type="text" class="output-data" disabled></li>
+                        <li class="pers-data-list-elem"> Телефон пользователя: <input type="text" class="output-data" disabled></li>
+                        <li class="pers-data-list-elem"> Адрес почты пользователя: <input type="text" class="output-data" disabled></li>
+                    </ol>
+                </div>
             </div>
             <hr color="black">
             <p>
@@ -44,7 +48,7 @@
                     добавлением (при желании) цифирь, дефиса («знак минус») и нижнего подчеркивания. Пробелы и служебные символы
                     (",/><[]{}) в написании якорного имени не допускаются. Количество якорей на веб-странице не ограничено, якоря
                     с одинаковым именем – не работают. Различают якорь-«name» и «id»-якорь.
-                </p>
+            </p>
 
             <p>
                     Абсолютные ссылки предназначены для якорей, расположенных на других веб-ресурсах – страницах, сайтах, доменах.
@@ -93,15 +97,25 @@
                 </ol>
 
             </div>
-            <p><a name="bottom"></a></p>
+
         </div>
 
-        <div class="endblock">
-            <p id="endtext"> Работа выполнена учеником 11т2 класса Ананьевым Никитой. </p>
+        <div class="input-block">
+            <form name="container" class="input-form">
+                    <input type="text" name="name" placeholder="введите свое имя" class="input-form-elem"/>
+                    <input type="text" name="surname" placeholder="введите фамилию" class="input-form-elem"/>
+                    <input type="text" name="phone" placeholder="введите номер телефона" class="input-form-elem"/>
+                    <input type="text" name="email" placeholder="введите адрес электронной почты" class="input-form-elem"/>
+                    <input type="submit" value="подтвердить" class="input-form-elem"/>
+            </form>
+
         </div>
 
     </div>
-
-
+    <div class="endblock">
+            <p id="endtext"> Работа выполнена учеником 11т2 класса Ананьевым Никитой. </p>
+    </div>
+    <p><a name="bottom"></a></p>
+    <script src="js-scripts/visitka.js" type="text/javascript"></script>
 </body>
 </html>
