--- a/visitka.html
+++ b/visitka.html
@@ -17,6 +17,7 @@
         <div class="menu-block">
             <ul class="menu-list">
                 <li class="menu"><a href="profile.html" class="ref"> Конвертатор </a></li>
+                <li class="menu"><a href="chess.html" class="ref">Шахматная доска</a></li>
                 <li class="menu"><a href="http://yandex.ru" class="ref"> Яндекс </a></li>
             </ul>
             <h3> Навигация по странице: </h3>
